GL/Projet_GL/src/test/deca/context/valid/sansObjet/bool/boolean_and_expression.deca
// Test : boolean_and_expression
// But : tester l’opérateur logique &&.
// Couvre : booléens, opérateur AND.
// Résultat attendu : compilation sans erreur.

{
    boolean b;
    b = true && false;
}