GL/Projet_GL/src/test/deca/context/invalid/sansObjet/bool/invalid_boolean_plus_boolean.deca
// Test : boolean_addition
// But : interdire l’addition entre deux booléens.
// Couvre : typage des opérateurs arithmétiques.
// Résultat attendu : erreur contextuelle.

{
    boolean b;
    b = true + false;
}